--- a/MY_SCHEDULE/Day_1.css
+++ b/MY_SCHEDULE/Day_1.css
@@ -1,27 +1,25 @@
-body{
- margin:0;
- background-color: rgba(83, 84, 85, 0.887);
+/* body {
+  margin: 0;
+  background-color: rgba(83, 84, 85, 0.887);
+}
+nav {
+  margin: 0px 0px;
+  height: 100px;
+  align-items: center;
+  display: flex;
+  box-sizing: border-box;
+  gap: 600px;
+  border: 1px solid black;
+  background-color: rgb(127, 128, 128);
+}
+nav img.logo {
+  margin: 30px;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+} */
 
-}
-nav
-{
-    margin:0px 0px;
-    height:100px;
-    align-items: center;
-    display:flex;
-    box-sizing: border-box;
-    gap:600px;
-    border: 1px solid black;
-    background-color:rgb(127, 128, 128);
-}
-nav img.logo{
-    margin: 30px;
-    width:80px;
-    height:80px;
-    border-radius: 50%;
-}
-
-.task_1
+/*.task_1
 {
     margin:50px 50px;
     width:100px;
@@ -32,5 +30,38 @@ nav img.logo{
     font-size: 15px;
     background-color:  rgb(231, 236, 231);
 
+}*/
+
+@media only screen and (min-width: 500px) {
+body {
+  margin: 0;
+  background-color: rgba(83, 84, 85, 0.887);
+}
+  .task_1 {
+    margin: 50px 50px;
+    width: 100px;
+    height: 80px;
+    padding: 5px;
+    border-radius: 20%;
+    border: 1px solid whitesmoke;
+    font-size: 15px;
+    background-color: rgb(231, 236, 231);
+  }
+  nav {
+  margin: 0px 0px;
+  height: 100px;
+  align-items: center;
+  display: flex;
+  box-sizing: border-box;
+  gap: 600px;
+  border: 1px solid black;
+  background-color: rgb(127, 128, 128);
+}
+nav img.logo {
+  margin: 30px;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
 }
 
+}
